[package]
name = "kaspa-atomic-swap-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Kaspa consensus and transaction building from covpp-reset2 (covenant support)
kaspa-core = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }

# CLI and serialization
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography and utilities
hex = "0.4"
sha2 = "0.10"
dirs = "5.0"

# RPC client for Kaspa nodes
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = "0.3"

# Phase 2: Real transaction support
secp256k1 = { version = "0.28", features = ["recovery"] }
rand = "0.8"
